Replace about gallery with highlight cards

--- a/public/index.html
+++ b/public/index.html
@@ -112,34 +112,34 @@
               </div>
             </dl>
           </div>
-          <div class="about__gallery about-photos fade-in-section">
-            <figure class="about__image about__image--primary">
-              <img
-                class="lazy"
-                src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-                data-src="https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/690521f9edf4205fef9d5e59.jpeg"
-                alt="Omelette Headquarters dining room with blue wainscoting and wooden booths"
-                loading="lazy"
-              />
-            </figure>
-            <figure class="about__image about__image--secondary">
-              <img
-                class="lazy"
-                src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-                data-src="https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/690522873db4b54e06052ded.jpeg"
-                alt="Pennsylvania Railroad vintage train wall art decoration"
-                loading="lazy"
-              />
-            </figure>
-            <figure class="about__image about__image--tertiary">
-              <img
-                class="lazy"
-                src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-                data-src="https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/6905227e9faf0156034d16c8.jpeg"
-                alt="Vintage locomotive photograph in sepia tones"
-                loading="lazy"
-              />
-            </figure>
+          <div class="about__highlights fade-in-section">
+            <article class="highlight-card">
+              <h3 class="highlight-card__title">Vintage Railroad Atmosphere</h3>
+              <p class="highlight-card__text">We celebrate Wakefield's golden age of rail travel with immersive decor, warm lighting, and stories from the original conductors who inspired our name.</p>
+              <ul class="highlight-card__list">
+                <li><span class="highlight-card__icon" aria-hidden="true">🚉</span><span>Authentic Pennsylvania Railroad memorabilia curated by the family.</span></li>
+                <li><span class="highlight-card__icon" aria-hidden="true">🛤️</span><span>Custom train-track accents and signage throughout the dining room.</span></li>
+                <li><span class="highlight-card__icon" aria-hidden="true">🎶</span><span>Vintage playlists and conductor announcements that set the tone.</span></li>
+              </ul>
+            </article>
+            <article class="highlight-card">
+              <h3 class="highlight-card__title">Family-Owned Hospitality</h3>
+              <p class="highlight-card__text">Three generations welcome guests with the same genuine smiles and heaping plates that made us a Wakefield tradition.</p>
+              <ul class="highlight-card__list">
+                <li><span class="highlight-card__icon" aria-hidden="true">🤝</span><span>Friendly regulars and first-time riders are greeted by name.</span></li>
+                <li><span class="highlight-card__icon" aria-hidden="true">👨‍👩‍👧</span><span>Kid-approved menu options and roomy booths for every crew.</span></li>
+                <li><span class="highlight-card__icon" aria-hidden="true">☕</span><span>Bottomless coffee pours and comfort classics straight from the griddle.</span></li>
+              </ul>
+            </article>
+            <article class="highlight-card">
+              <h3 class="highlight-card__title">Diner Comforts You'll Love</h3>
+              <p class="highlight-card__text">From signature three-egg omelettes to scratch-made specials, every bite is prepared with care and served with plenty of nostalgic flair.</p>
+              <ul class="highlight-card__list">
+                <li><span class="highlight-card__icon" aria-hidden="true">🍳</span><span>30+ inventive omelette combinations plus build-your-own choices.</span></li>
+                <li><span class="highlight-card__icon" aria-hidden="true">🥞</span><span>Fluffy waffles, bennies, and seasonal specials on constant rotation.</span></li>
+                <li><span class="highlight-card__icon" aria-hidden="true">🚂</span><span>Weekend crowds line up early—arrive before departure to secure your seat!</span></li>
+              </ul>
+            </article>
           </div>
         </div>
         <div class="section-divider" role="presentation" aria-hidden="true"></div>
