Showcase grooming tools imagery on services preview

--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,14 @@
             </div>
           </div>
           <div class="space-y-6">
-            <div class="image-placeholder h-64 w-full">Service visuals placeholder</div>
+            <figure class="tools-frame" aria-labelledby="tools-caption">
+              <img
+                src="https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/aaf8985e-3ce0-4b98-86a3-fa46becfb09c.png"
+                alt="Professional barber tools neatly arranged on a work surface"
+                loading="lazy"
+              />
+              <figcaption id="tools-caption" class="sr-only">Barber tools staged for premium grooming services.</figcaption>
+            </figure>
             <div class="rounded-lg bg-white p-6 shadow-lg">
               <h3 class="font-display text-xl text-charcoal">Ready When You Are</h3>
               <p class="mt-2 text-sm text-slate-700">
