Add grand opening photo and context to about page

--- a/public/about.html
+++ b/public/about.html
@@ -109,10 +109,27 @@
             <article class="rounded-2xl bg-white p-8 shadow-xl">
               <h2 class="font-display text-2xl text-charcoal">Rooted in Malden</h2>
               <p class="mt-3 text-sm text-slate-700">
-                On July 7, 2025, JS Cuts Barber Salon welcomed Mayor Gary Christenson to our grand opening ceremony, affirming our
-                dedication to the city of Malden and its residents.
+                On July 7, 2025, JS Cuts Barber Salon welcomed Mayor Gary Christenson to our grand opening ceremony at 380 Salem
+                Street in Malden. The celebration underscored our commitment to delivering top-notch customer service in a
+                relaxing environment for every guest who walks through our doors.
               </p>
-              <div class="image-placeholder mt-6 h-56 w-full">Grand opening ceremony placeholder</div>
+              <p class="mt-3 text-sm text-slate-700">
+                Owner Paul Jean Claude, Jr. brings many years of industry experience and a passion for barbering, hair cutting,
+                styling, beard trims, and straight-razor shaves. He is honored to serve the Malden community and invites you to
+                call <a class="font-semibold text-charcoal hover:underline" href="tel:17812672029">(781) 267-2029</a> for
+                availability or visit our booking platform for the latest schedule updates.
+              </p>
+              <figure class="grand-opening-figure mt-6">
+                <img
+                  src="https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/690aa27291bfac46ec11e8c5.png"
+                  alt="Mayor Gary Christenson standing with owner Paul Jean Claude, Jr. at the JS Cuts Barber Salon grand opening"
+                  loading="lazy"
+                />
+                <figcaption class="mt-3 text-xs uppercase tracking-[0.18em] text-slate-500">
+                  Mayor Gary Christenson joined Paul Jean Claude, Jr. to celebrate the JS Cuts Barber Salon grand opening on July 7,
+                  2025.
+                </figcaption>
+              </figure>
             </article>
             <article class="rounded-2xl bg-white p-8 shadow-xl">
               <h2 class="font-display text-2xl text-charcoal">Experience the JS Cuts Difference</h2>
