--- a/public/contact.html
+++ b/public/contact.html
@@ -190,19 +190,64 @@
         </div>
       </section>
 
-      <section class="bg-mist/40">
-        <div class="mx-auto max-w-6xl px-6 py-20 lg:px-8">
-          <div class="overflow-hidden rounded-3xl shadow-2xl">
-            <iframe
-              title="Map to Kennedy's Cafe in Stoneham Massachusetts"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.014803960111!2d-71.10161752337996!3d42.480701227742865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e376bde57c05c1%3A0x11729c9693e2c34d!2sKennedy's%20Cafe!5e0!3m2!1sen!2sus!4v1700000000000!5m2!1sen!2sus"
-              loading="lazy"
-              width="100%"
-              height="420"
-              style="border: 0"
-              allowfullscreen=""
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+      <section class="relative isolate py-20">
+        <div class="absolute inset-0">
+          <img
+            src="https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/690b78ca7b2dc57bee34abe4.jpg"
+            alt="Kennedy's Cafe storefront exterior in downtown Stoneham, Massachusetts"
+            class="h-full w-full object-cover"
+            loading="lazy"
+            onerror="this.onerror=null;this.src='https://via.placeholder.com/1600x900?text=Kennedys+Cafe';"
+          />
+          <div class="absolute inset-0 bg-navy/80"></div>
+        </div>
+        <div class="relative mx-auto flex max-w-6xl flex-col gap-12 px-6 lg:flex-row lg:items-center lg:justify-between lg:px-8">
+          <div class="max-w-xl space-y-6 text-white">
+            <p class="text-xs font-semibold uppercase tracking-[0.3em] text-white/70">Find us easily</p>
+            <h2 class="text-3xl font-extrabold leading-tight text-white sm:text-4xl">Right in the heart of downtown Stoneham</h2>
+            <p class="text-base text-white/80">
+              We're located at 362 Main St, Suite 1—minutes from Stoneham Square with plenty of nearby parking. Tap the map for
+              turn-by-turn directions or save our address for your next visit.
+            </p>
+            <div class="grid gap-4 text-sm text-white/80 sm:grid-cols-2">
+              <div class="rounded-2xl bg-white/10 p-4 backdrop-blur-md">
+                <h3 class="text-sm font-semibold uppercase tracking-wide text-white">Visit</h3>
+                <p class="mt-2 leading-relaxed">
+                  362 Main St, Suite 1<br />Stoneham, MA 02180
+                </p>
+                <a
+                  href="https://maps.google.com/?q=Kennedy's+Cafe+Stoneham"
+                  target="_blank"
+                  rel="noreferrer"
+                  class="mt-3 inline-flex items-center gap-2 text-sm font-semibold text-white transition hover:text-turquoise"
+                >
+                  <i class="fa-solid fa-location-dot"></i>
+                  Get Directions
+                </a>
+              </div>
+              <div class="rounded-2xl bg-white/10 p-4 backdrop-blur-md">
+                <h3 class="text-sm font-semibold uppercase tracking-wide text-white">Call</h3>
+                <p class="mt-2 text-lg font-semibold text-white">(781) 438-4004</p>
+                <a href="tel:17814384004" class="inline-flex items-center gap-2 text-sm font-semibold text-white transition hover:text-turquoise">
+                  <i class="fa-solid fa-phone"></i>
+                  Tap to Call
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="w-full max-w-xl overflow-hidden rounded-3xl bg-white/10 p-2 shadow-2xl backdrop-blur">
+            <div class="overflow-hidden rounded-3xl">
+              <iframe
+                title="Map to Kennedy's Cafe in Stoneham Massachusetts"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.014803960111!2d-71.10161752337996!3d42.480701227742865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e376bde57c05c1%3A0x11729c9693e2c34d!2sKennedy's%20Cafe!5e0!3m2!1sen!2sus!4v1700000000000!5m2!1sen!2sus"
+                loading="lazy"
+                width="100%"
+                height="420"
+                style="border: 0"
+                allowfullscreen=""
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
           </div>
         </div>
       </section>
