--- a/public/index.html
+++ b/public/index.html
@@ -80,10 +80,13 @@
       <section class="relative flex min-h-screen items-center justify-center overflow-hidden bg-navy text-white">
         <div
           class="absolute inset-0 bg-cover bg-center"
-          style="background-image: url('https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/690b760a6e306f2acd5d8186.jpg');"
+          style="background-image: url('https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/690b78ca7b2dc57bee34abe4.jpg');"
           role="presentation"
         ></div>
-        <div class="absolute inset-0 bg-navy/75" aria-hidden="true"></div>
+        <div
+          class="absolute inset-0 bg-gradient-to-br from-navy/90 via-navy/80 to-navy/70"
+          aria-hidden="true"
+        ></div>
         <div class="relative z-10 mx-auto flex w-full max-w-5xl flex-col gap-8 px-6 py-24 text-center sm:text-left lg:px-8">
           <p class="text-sm uppercase tracking-[0.35em] text-white/80">Stoneham, Massachusetts</p>
           <h1 class="text-4xl font-extrabold leading-tight drop-shadow-2xl sm:text-5xl lg:text-6xl">Stoneham's Viral Coffee Destination</h1>
