Swap smoothie photography with updated asset

--- a/public/index.html
+++ b/public/index.html
@@ -262,8 +262,8 @@
             <article class="feature-card">
               <div class="feature-card-media">
                 <img
-                  src="https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/690b74a6dc2a545c8b7abf3f.jpg"
-                  alt="Green Monstah smoothie in clear cup from Kennedy's Cafe"
+                  src="https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/690b886e6e306f7bcc60af40.jpg"
+                  alt="Kennedy's Cafe smoothies displayed with fresh berries"
                   loading="lazy"
                   onerror="this.onerror=null;this.src='https://via.placeholder.com/400x280?text=Smoothies';"
                 />
