--- a/public/menu.html
+++ b/public/menu.html
@@ -269,8 +269,8 @@
             <article class="menu-card">
               <div class="menu-media">
                 <img
-                  src="https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/690b74a6dc2a545c8b7abf3f.jpg"
-                  alt="Green Monstah smoothie in clear cup"
+                  src="https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/690b886e6e306f7bcc60af40.jpg"
+                  alt="Array of Kennedy's Cafe smoothies with fresh fruit garnishes"
                   loading="lazy"
                   onerror="this.onerror=null;this.src='https://via.placeholder.com/540x360?text=Smoothies';"
                 />
