--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
     <main>
       <section class="hero-section overflow-hidden text-ivory">
         <div class="relative z-10 mx-auto flex max-w-6xl flex-col gap-6 px-4 py-24 lg:flex-row lg:items-center">
-          <div class="max-w-2xl space-y-6">
+          <div class="hero-copy max-w-2xl space-y-6">
             <p class="text-sm uppercase tracking-[0.2em] text-accent">Malden, Massachusetts</p>
             <h1 class="font-display text-4xl font-semibold leading-tight text-white md:text-5xl">
               JS Cuts Barber Salon: Top-Notch Grooming in a Relaxing Malden Environment
