Force rebuild for centered category numbers

--- a/public/client-dashboard.html
+++ b/public/client-dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Chart fix deployed: 2025-11-20 -->
+<!-- Chart fix deployed: 2025-11-20 | Category numbers centered -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
