Fix table scrolling - remove overflow:hidden override that blocked internal table scroll

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1144,7 +1144,7 @@
       border: 1px solid var(--border-subtle) !important;
       box-shadow: var(--shadow-md) !important;
       border-radius: var(--radius-lg) !important;
-      overflow: hidden !important;
+      /* Don't override overflow - table needs internal scrolling */
     }
 
     .table-header {
