Change call count numbers to white

--- a/public/client-dashboard.html
+++ b/public/client-dashboard.html
@@ -308,7 +308,7 @@
     .bar-value {
       font-size: 15px;
       font-weight: 700;
-      color: #00FFFF;
+      color: #ffffff;
       text-align: center;
     }
 
